# dataraster

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/dataraster/: __init__.py  __main__.py  app.py  cli.py
