[metadata]
name = dataraster
version = attr: dataraster.__version__
description = Raster a 2d array of data as an image using a colormap.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    matplotlib
    pysimplegui

[options.packages.find]
where = src
