[metadata]
name = dataraster
description = Raster a 2d array of data as an image using a colormap.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
author = Jonathan Olsten <jonathan.olsten@gmail.com>
maintainer = Jonathan Olsten <jonathan.olsten@gmail.com>
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
setup_requires =
    setuptools_scm
install_requires =
    click>=8.0
    numpy
    matplotlib
    pysimplegui
tests_require =
    pytest
zip_safe = False
package_dir=
    =src
packages = find:

[options.packages.find]
where=src
